--- a/Wrapsy/app/src/main/res/values/colors.xml
+++ b/Wrapsy/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="amarilloClaroPastel">#eddca4</color>
     <color name="verdeOlivaGrisaceo">#788069</color>
     <color name="verdePastelSuave">#deefc0</color>
+    <color name="lilablanco">#eaddee</color>
 </resources>
