--- a/Wrapsy/app/src/main/res/layout/activity_sing_up.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_sing_up.xml
@@ -21,7 +21,7 @@
             android:layout_height="50dp"
             android:layout_marginTop="30dp"
             android:contentDescription="@string/app_name"
-            android:src="" />
+            android:src="@drawable/icono_wrapsy" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -41,6 +41,40 @@
             android:textColor="#4D5F41"
             android:textSize="14sp" />
 
+        <Button
+            android:id="@+id/facebook_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#E3F6C6"
+            android:drawableLeft=""
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="Use Facebook"
+            android:textAllCaps="false"
+            android:textColor="#4D5F41" />
+
+        <Button
+            android:id="@+id/gmail_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="#E3F6C6"
+            android:drawableLeft=""
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="Use Gmail"
+            android:textAllCaps="false"
+            android:textColor="#4D5F41" />
+
+        <TextView
+            android:id="@+id/login_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Already have an account? Log in"
+            android:textColor="#FF000000"
+            android:textSize="14sp" />
         <EditText
             android:layout_width="295dp"
             android:layout_height="wrap_content"
