--- a/Wrapsy/app/src/main/res/values/themes.xml
+++ b/Wrapsy/app/src/main/res/values/themes.xml
@@ -1,8 +1,13 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Wrapsy" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
+        <item name="colorPrimary">@color/purple_button</item>
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
+    <style name="WrapsyPurpleButton">
+        <item name="android:background">@drawable/purple_button_background</item>
+        <item name="android:textColor">@color/cremaPalido</item>
+        <item name="android:padding">10dp</item>
     </style>
 
     <style name="Theme.Wrapsy" parent="Base.Theme.Wrapsy" />
