--- a/Wrapsy/app/src/main/res/layout/activity_save_item_my_lists.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_save_item_my_lists.xml
@@ -24,12 +24,12 @@
             android:gravity="center">
 
 
-                <ImageView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    android:layout_gravity="center"
-                    android:contentDescription="Logo"
-                    android:src="@drawable/icono_wrapsy" />
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:contentDescription="Logo"
+                android:src="@drawable/icono_wrapsy" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -54,7 +54,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Save Item"
+                android:text="My lists"
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:padding="16dp"/>
@@ -64,7 +64,7 @@
                 style="@style/WrapsyPurpleButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/wishlist"
+                android:text="See later"
                 android:layout_marginHorizontal="16dp"/>
 
             <Button
@@ -73,7 +73,15 @@
                 style="@style/WrapsyPurpleButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/list"
+                android:text="Christmas 2025 🎄"
+                android:layout_marginHorizontal="16dp"/>
+            <Button
+                android:id="@+id/btn_list"
+                android:layout_marginTop="4dp"
+                style="@style/WrapsyPurpleButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Offers"
                 android:layout_marginHorizontal="16dp"/>
 
         </LinearLayout>
