--- a/Wrapsy/app/src/main/res/layout/activity_gift_quiz.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_gift_quiz.xml
@@ -22,7 +22,7 @@
         <ImageView
             android:layout_width="120dp"
             android:layout_height="120dp"
-            android:src="@drawable/icono_wrapsy"/>
+            android:src="@drawable/ic_wrapsy"/>
 
         <TextView
             android:layout_width="wrap_content"
