--- a/Wrapsy/app/src/main/res/layout/activity_perfect_gift_quiz.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_perfect_gift_quiz.xml
@@ -13,7 +13,7 @@
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/icono_wrapsy"/>
+        android:src="@drawable/ic_wrapsy"/>
 
     <TextView
         android:layout_width="wrap_content"
