--- a/Wrapsy/app/src/main/res/layout/activity_profile_edit_profile.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_profile_edit_profile.xml
@@ -8,7 +8,7 @@
         android:id="@+id/iv_favorites"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/icono_wrapsy"
+        android:src="@drawable/ic_wrapsy"
         android:layout_alignParentStart="true"
         android:layout_margin="12dp" />
 
@@ -64,15 +64,6 @@
             android:textSize="16sp"
             android:textColor="#FF000000"/>
 
-        <EditText
-            android:id="@+id/et_profile_picture"
-            android:layout_width="350dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="#FFFFFF"
-            android:hint="Upload file..."
-            android:padding="8dp" />
-
     </LinearLayout>
 
     <LinearLayout
@@ -121,96 +112,14 @@
         android:id="@+id/btn_logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/bottom_nav"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="20dp"
         android:backgroundTint="#707B65"
         android:text="Save changes"
         android:textColor="#FFFFFFFF" />
 
-    <LinearLayout
-        android:id="@+id/bottom_nav"
+    <include
+        android:layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:background="#B6E388"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
-
-        <LinearLayout
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Stores"
-                android:textSize="18sp" />
-
-            <ImageView
-                android:src="@drawable/ic_store"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Orders"
-                android:textSize="18sp" />
-
-            <ImageView
-                android:src="@drawable/ic_orders"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Coupons"
-                android:textSize="18sp" />
-
-            <ImageView
-                android:src="@drawable/ic_coupon"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_weight="1"
-            android:orientation="vertical"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="match_parent">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Profile"
-                android:textSize="18sp" />
-
-            <ImageView
-                android:src="@drawable/ic_profile"
-                android:layout_width="24dp"
-                android:layout_height="24dp" />
-        </LinearLayout>
-    </LinearLayout>
-
+        android:layout_height="wrap_content"/>
 </RelativeLayout>
