--- a/Wrapsy/app/src/main/res/layout/activity_recommended_gifts.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_recommended_gifts.xml
@@ -14,14 +14,29 @@
         android:layout_marginTop="24dp"
         android:orientation="vertical"
         >
-
-
+        
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_gravity="center"
             android:contentDescription="Logo"
-            android:src="@drawable/icono_wrapsy" />
+            android:src="@drawable/ic_wrapsy" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Recommended gifts"
+            android:textColor="@color/dark_green"
+            android:textSize="24sp"
+            android:textStyle="bold" />
     </LinearLayout>
+
+    <GridView
+        android:id="@+id/productos_catalogo"
+        android:layout_width="match_parent"
+        android:layout_height="290dp"
+        android:numColumns="2"
+        android:layout_marginTop="18dp"
+        android:paddingHorizontal="6dp"/>
 
 </LinearLayout>
