--- a/Wrapsy/app/src/main/res/layout/activity_save_item.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_save_item.xml
@@ -29,7 +29,7 @@
                     android:layout_height="60dp"
                     android:layout_gravity="center"
                     android:contentDescription="Logo"
-                    android:src="@drawable/icono_wrapsy" />
+                    android:src="@drawable/ic_wrapsy" />
 
             <TextView
                 android:layout_width="wrap_content"
