--- a/Wrapsy/app/src/main/res/layout/activity_order_details.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_order_details.xml
@@ -56,7 +56,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_gravity="center"
-        android:src="@drawable/icono_wrapsy"/>
+        android:src="@drawable/ic_wrapsy"/>
 
     <TextView
         android:layout_width="wrap_content"
