--- a/Wrapsy/app/src/main/res/layout/activity_gift_quiz_step1.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_gift_quiz_step1.xml
@@ -126,7 +126,7 @@
             android:layout_marginRight="30dp"/>
 
         <Button
-            android:id="@+id/btnNext"
+            android:id="@+id/btnNext1_3"
             android:layout_width="150dp"
             android:layout_height="60dp"
             android:backgroundTint="@color/verdeOlivaGrisaceo"
