--- a/Wrapsy/app/src/main/res/layout/activity_gift_quiz_step2.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_gift_quiz_step2.xml
@@ -233,7 +233,7 @@
             app:cornerRadius="8dp" />
 
         <Button
-            android:id="@+id/btnNext"
+            android:id="@+id/btnNext2_3"
             android:layout_width="150dp"
             android:layout_height="60dp"
             android:backgroundTint="@color/verdeOlivaGrisaceo"
