--- a/Wrapsy/app/src/main/res/layout/activity_save_item_my_lists.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_save_item_my_lists.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/background_cream"
     android:orientation="vertical"
-    tools:context=".SaveItemActivity">
+    tools:context=".SaveItemMyListsActivity">
 
     <!-- Contenido principal -->
     <LinearLayout
@@ -29,7 +29,7 @@
                 android:layout_height="60dp"
                 android:layout_gravity="center"
                 android:contentDescription="Logo"
-                android:src="@drawable/icono_wrapsy" />
+                android:src="@drawable/ic_wrapsy" />
 
             <TextView
                 android:layout_width="wrap_content"
