--- a/Wrapsy/app/src/main/res/layout/activity_save_item_my_lists.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_save_item_my_lists.xml
@@ -11,7 +11,8 @@
     <!-- Contenido principal -->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp"
         android:orientation="vertical"
         android:gravity="center">
 
@@ -85,5 +86,10 @@
                 android:layout_marginHorizontal="16dp"/>
 
         </LinearLayout>
+
     </LinearLayout>
+    <include
+        android:layout="@layout/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 </LinearLayout>
