--- a/Wrapsy/app/src/main/res/layout/activity_recommended_gifts.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_recommended_gifts.xml
@@ -9,34 +9,49 @@
     android:gravity="center"
     tools:context=".RecommendedGiftsActivity">
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
+        android:layout_height="0dp"
         android:orientation="vertical"
+        android:gravity="center"
+        android:padding="20dp"
         >
-        
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:contentDescription="Logo"
-            android:src="@drawable/ic_wrapsy" />
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="Recommended gifts"
-            android:textColor="@color/dark_green"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:orientation="vertical"
+            android:layout_marginBottom="40dp"
+            >
+
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:contentDescription="Logo"
+                android:src="@drawable/ic_wrapsy" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Recommended gifts"
+                android:textColor="@color/dark_green"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <GridView
+            android:id="@+id/productos_catalogo"
+            android:layout_width="match_parent"
+            android:layout_height="290dp"
+            android:numColumns="2"
+            android:layout_marginTop="18dp"
+            android:paddingHorizontal="6dp"/>
+
     </LinearLayout>
 
-    <GridView
-        android:id="@+id/productos_catalogo"
+    <include
+        android:layout="@layout/bottom_navigation"
         android:layout_width="match_parent"
-        android:layout_height="290dp"
-        android:numColumns="2"
-        android:layout_marginTop="18dp"
-        android:paddingHorizontal="6dp"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
