Backend developer encubierto sigue desapercibido
Ya le puse navbar a todos. Falta la logica y faltan las imagenes.

--- a/Wrapsy/app/src/main/res/layout/activity_coupons.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_coupons.xml
@@ -312,6 +312,9 @@
 
 
     </GridLayout>
-
+    <include
+        android:layout="@layout/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
