--- a/Wrapsy/app/src/main/res/layout/activity_notifications.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_notifications.xml
@@ -189,8 +189,9 @@
 
     </ScrollView>
 
-
-
-
+    <include
+        android:layout="@layout/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
