--- a/Wrapsy/app/src/main/res/layout/activity_share_with_friends.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_share_with_friends.xml
@@ -78,7 +78,7 @@
         android:orientation="vertical"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp">
+        android:layout_marginBottom="70dp">
 
         <!-- Contenedor para la sección de compartir -->
         <androidx.cardview.widget.CardView
@@ -152,6 +152,9 @@
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
-
+    <include
+        android:layout="@layout/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
