--- a/Wrapsy/app/src/main/res/layout/activity_more_options.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_more_options.xml
@@ -9,7 +9,7 @@
         android:id="@+id/iv_favorites"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/icono_wrapsy"
+        android:src="@drawable/ic_wrapsy"
         android:layout_alignParentStart="true"
         android:layout_margin="12dp" />
 
