--- a/Wrapsy/app/src/main/res/layout/activity_notifications.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_notifications.xml
@@ -23,7 +23,7 @@
             android:background="@drawable/circleyellow"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_notificaciones"
+            android:src="@drawable/ic_shopping_basket"
             android:contentDescription="Shopping basket" />
 
         <ImageView
@@ -34,7 +34,7 @@
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="@drawable/circleyellow"
-            android:src="@drawable/ic_notificaciones"
+            android:src="@drawable/ic_tres_rayitas"
             android:contentDescription="Menu" />
     </RelativeLayout>
 
@@ -78,10 +78,10 @@
 
             <ImageView
                 android:id="@+id/searchIcon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginEnd="8dp"
-                android:src="@drawable/ic_notificaciones"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                android:layout_marginEnd="20dp"
+                android:src="@drawable/ic_lupita"
                 android:contentDescription="Search"
                 android:layout_gravity="center"
                 />
