--- a/Wrapsy/app/src/main/res/layout/activity_profile.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:background="#FFFEE8"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Profile">
+    tools:context=".ProfileActivity">
 
     <ScrollView
         android:layout_width="match_parent"
