--- a/Wrapsy/app/src/main/res/layout/activity_send_invite.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_send_invite.xml
@@ -99,10 +99,10 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="#A5D6A7"
+                    android:background="@color/pistache"
                     android:gravity="center"
                     android:padding="16dp"
-                    android:text="Invite a friend"
+                    android:text="@string/invite_friend"
                     android:textColor="#FFFFFF"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -181,10 +181,10 @@
                 android:id="@+id/cancel_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#7D8779"
+                android:background="@color/verdeOlivaGrisaceo"
                 android:gravity="center"
                 android:padding="16dp"
-                android:text="Cancel"
+                android:text="@string/cancel_btn"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp" />
         </androidx.cardview.widget.CardView>
