--- a/Wrapsy/app/src/main/res/layout/activity_orders.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_orders.xml
@@ -130,7 +130,7 @@
                                 android:id="@+id/tv_product_name"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Heimerdinger plush"
+                                android:text="@string/titulo_regalo_producto"
                                 android:textColor="#333333"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -140,7 +140,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="4dp"
-                                android:text="It will arrive on March 30th"
+                                android:text="@string/informacion_fecha_llegada"
                                 android:textColor="#333333"
                                 android:textSize="14sp" />
 
@@ -149,7 +149,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="4dp"
-                                android:text="Shipped"
+                                android:text="@string/status2"
                                 android:textColor="#9370DB"
                                 android:textSize="14sp" />
 
@@ -210,7 +210,7 @@
                                 android:id="@+id/tv_product_name2"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Handmade Crochet \n Sunflower Gift Bag"
+                                android:text="@string/titulo_regalo_producto"
                                 android:textColor="#333333"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -220,7 +220,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="4dp"
-                                android:text="Delivered on February 14th"
+                                android:text="@string/informacion_fecha_llegada"
                                 android:textColor="#333333"
                                 android:textSize="14sp" />
 
@@ -229,7 +229,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="4dp"
-                                android:text="Delivered"
+                                android:text="@string/status2"
                                 android:textColor="#9370DB"
                                 android:textSize="14sp" />
 
@@ -271,7 +271,7 @@
                                 android:id="@+id/tv_product_name3"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Strawberry plush"
+                                android:text="@string/titulo_regalo_producto"
                                 android:textColor="#333333"
                                 android:textSize="16sp"
                                 android:textStyle="bold" />
@@ -281,7 +281,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="4dp"
-                                android:text="It was canceled"
+                                android:text="@string/informacion_fecha_llegada"
                                 android:textColor="#333333"
                                 android:textSize="14sp" />
 
@@ -290,7 +290,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="4dp"
-                                android:text="Canceled"
+                                android:text="@string/status2"
                                 android:textColor="#9370DB"
                                 android:textSize="14sp" />
 
