--- a/Wrapsy/app/src/main/res/layout/activity_reviews.xml
+++ b/Wrapsy/app/src/main/res/layout/activity_reviews.xml
@@ -110,7 +110,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Heimerdinger plush"
+                    android:text="@string/titulo_regalo_producto"
                     android:textColor="#333333"
                     android:textSize="16sp"
                     android:textStyle="bold" />
@@ -119,7 +119,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:text="It will arrive on March 30th"
+                    android:text="@string/informacion_fecha_llegada"
                     android:textColor="#333333"
                     android:textSize="14sp" />
 
@@ -127,7 +127,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
-                    android:text="Shipped"
+                    android:text="@string/status2"
                     android:textColor="#9370DB"
                     android:textSize="14sp" />
 
@@ -222,14 +222,14 @@
         android:layout_marginBottom="10dp"
         app:cardElevation="0dp">
 
-        <Button
+        <TextView
             android:id="@+id/submit_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#7D8779"
+            android:background="@color/verdeOlivaGrisaceo"
             android:gravity="center"
             android:padding="16dp"
-            android:text="Submit"
+            android:text="@string/submit_btn"
             android:textColor="#FFFFFF"
             android:textSize="16sp"
             />
